--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "version": "0.0.1",
     "private": true,
     "dependencies": {
-      "request" : "*",
+      "request" : "2.9.153",
       "jsdom"   : "*"
     }
 }
